# SimpleCP-AIM-test

./: .aicm-config  .coverage  .env.example  .gitignore  AICM_SYNC_WORKFLOW.md  BACKEND_TESTING_REPORT.md  BOARD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS_FOR_TCC.md  INTEGRATION_TEST_REPORT.md  LICENSE  Makefile  PORT_8000_FIX_IMPLEMENTATION.md  QUICKSTART.md  README.md  RESTART_PROMPT.md  SESSION_EXIT_SNAPSHOT.md  TASKS.md  TCC_SETUP.md  USER_GUIDE_TCC_INSTALLATION.md  __init__.py  ai-tag-release.sh  clipboard_manager.py  config.json  docker-compose.yml  install-tcc.sh  kill_backend.sh  logger.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.py  setup.py  tcc-setup-integration.patch  test-ollama.sh  (+2 more)
.ai/: AUTO_COMM_STATUS.md  BEHAVIOR_RULES.md  COMPLETION_REPORT.md  CURRENT_TASK.md  PING_TEST.md  PONG_RESPONSE.md  README.md  STATUS
.ai-framework/: QUICK_START_ENFORCEMENT.md  TCC_ENFORCEMENT_SYSTEM.md  tcc-enforce.sh
.ai-framework-backup/: BRANCH_ACTIVITY.md  auto-communication-monitor.sh  branch-monitor.sh  comm-status.sh  enhanced-monitor.sh  start-comm-monitor.sh
.ai-framework-backup/session-recovery/: REBOOT_QUICK_START.md
.ai-framework/rules/: REPOSITORY_SYNC_RULES.md  VALIDATION_RULES.md
.ai-framework/scripts/: post-work-sync.sh  pre-work-sync.sh  session-logging.sh
.ai-framework/session-recovery/: CURRENT_SESSION_STATE.md
.aicm/.ai/: CURRENT_TASK.md  STATUS
.aicm/.claude/commands/: check-the-board.md  merge-to-main.md  works-ready.md
.aicm/.claude/hooks/: session-start.sh
.aicm/commands/: check-the-board.md  fix-violations.md  verify.md  works-ready.md
.aicm/hooks/: session-start.sh
.aicm/rules/: FRONTEND_TESTING_RULES.md  GENERAL_AI_RULES.md  REPOSITORY_SYNC_PROTOCOL.md  STARTUP_PROTOCOL.md  STREAMLINING_v2.0.md
.aicm/tcc-config-files/: .tccrc  TCC_INITIALIZATION_GUIDE.md  tcc-init.sh
.claude/: COMMAND_WORKAROUNDS.md
.claude/hooks/: session-start-display.sh  session-start.sh  works-ready-hook.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-update.yml  release.yml
SimpleCP-Swift/: IMPLEMENTATION_STATUS.md  README.md
SimpleCP-Swift/SimpleCP/App/: ContentView.swift  SimpleCPApp.swift
SimpleCP-Swift/SimpleCP/Models/: APIModels.swift  AppState.swift  ClipboardItem.swift
SimpleCP-Swift/SimpleCP/Services/: APIClient.swift  ClipboardService.swift  SearchService.swift  SnippetService.swift
SimpleCP-Swift/SimpleCP/Utils/: Constants.swift  DateUtils.swift
SimpleCP-macOS/: .gitignore  IMPROVEMENTS.md  PHASE1_IMPROVEMENTS.md  README.md  TESTING_COMPLETE.md  TEST_RESULTS.md
SimpleCP-macOS/Resources/: Info.plist
SimpleCP-macOS/SimpleCP/: APIService.swift  App.swift  ClipboardManager.swift  ContentView.swift  MenuBarView.swift
SimpleCP-macOS/SimpleCP-macOS/: APIClient.swift  ContentView.swift  Info.plist  Models.swift  SimpleCPApp.swift
SimpleCP-macOS/SimpleCP-macOS.xcodeproj/: project.pbxproj
SimpleCP-macOS/SimpleCP.xcodeproj/: project.pbxproj
SimpleCP-macOS/SimpleCP/App/: SimpleCPApp.swift
api/: __init__.py  endpoints.py  models.py
backend/: clipboard_manager.py  config.py  daemon.py  keyboard_shortcuts.py  logger.py  main.py  requirements.txt  settings.py  test_history.py  test_history_direct.py  test_load.py
backend/api/: endpoints.py  models.py  server.py
backend/data/: history.json  snippets.json
backend/stores/: __init__.py  clipboard_item.py  history_store.py  snippet_store.py
backend/tests/: test_basic_history.py  test_clipboard_manager.py  test_misc_api.py  test_snippet_folder.py
backend/ui/: __init__.py  menu_builder.py
config/: .pre-commit-config.yaml  MANIFEST.in  __init__.py  logging_config.py  settings.json  settings.py
data/: example_config.json  example_history.json  example_snippets.json
deployment/docker/: README.md
docs/: AI_WORKFLOW.md  API.md  BACKEND_TESTING_INSTRUCTIONS.md  BOARD.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FOLDER_API_INTEGRATION.md  GITHUB_COLLABORATION_INSTRUCTIONS.md  HANDOVER_FROM_CLAUDE_CODE.md  OCC_IMPLEMENTATION_TASKS.md  OCC_PROMPT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_TCC_INSTALLATION.md  SWIFT_FRONTEND_BUILD_PLAN.md  TASK_COMPLETION_SUMMARY.md  TCC_REVIEW_AND_MERGE_NOTIFICATION.md  TCC_WORKFLOW_GUIDE.md  TROUBLESHOOTING.md  UI_UX_SPECIFICATION_v3.md  USER_GUIDE.md  WEB_CLAUDE_COLLABORATION_GUIDE.md
docs/ai_communication/: AI_REPORT_2025-11-19.md  VALIDATION_RULES.md
docs/api/: API_REFERENCE.md
docs/archive/: BUILD_SUMMARY.md  FOLDER_RENAME_IMPLEMENTATION.md  PHASE_2_TEST_REPORT.md  STATIC_ANALYSIS.md  VIOLATION_REPORT_2025-11-17.md
docs/development/: ARCHITECTURE.md
docs/marketing/: QUICK_START_LAUNCH_GUIDE.md  STRATEGY_INDEX.md  STRATEGY_OVERVIEW.md
frontend/SimpleCP-macOS/: Package.swift  README.md
monitoring/: __init__.py  health.py
scripts/: README.md  backup.sh  build.sh  build_python.sh  build_swift.sh  clean.sh  cleanup-watchers.sh  healthcheck.sh  install.sh  prepare_signing.sh  release.sh  restore.sh  setup_dev.sh  tcc-file-compliance.sh  tcc-validate-branch.sh  version_manager.sh  watch-all.sh  watch-board.sh  watch-branches.sh  watch-build.sh  watcher-status.sh
scripts/utilities/: aicm
scripts/validation/: common.sh  run_all_tests.sh  test_documentation_integrity.sh  test_git_status.sh  test_repository_structure.sh
stores/: __init__.py  clipboard_item.py  history_store.py  snippet_store.py
tcc-config-files/: TCC_QUICK_START.md
tests/: __init__.py  conftest.py  generate_test_data.py  test_api_endpoints.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_clipboard_item.py  test_history_store.py  test_snippet_store.py
tools/: create_session_snapshot.sh  restore_session.sh  sync-from-aicm.sh  sync-to-aicm.sh
tools/ai_collaboration_framework/: DEPLOYMENT_GUIDE.md  README.md  install.sh
tools/monitoring/: metrics.py
tools/scripts/: create_app_bundle.sh  prepare_signing.sh
ui/: __init__.py  menu_builder.py
(+71 files in other folders)
